# scrapyard

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  locks.rs  values.rs
src/bindings/: itemizer.rs  mod.rs  pseudoitem.rs
src/options/: feeds.rs  fetched.rs  master.rs  mod.rs
src/traits/: mod.rs  saveable.rs
