[package]
name = "scrapyard"
authors = [ "Siriusmart" ]
version = "0.3.0"
edition = "2021"
description = "Automatic web scraper and RSS generator library"
readme = "README.md"
repository = "https://github.com/siriusmart/scrapyard"
license = "AGPL-3.0"
keywords = ["rss", "feed", "scraper", "web", "automatic"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
chrono = "0.4"
dirs = "5.0"
reqwest = "0.11"
rss = "2.0"
serde = { version = "1.0", features = [ "derive" ]}
serde-inline-default = "0.1"
serde_default = "0.1"
serde_json = { version = "1.0" }
subprocess = "0.2"
tokio = { version = "1.33", features = [ "fs", "process", "macros" ]}
